T369636: Fix border misalignment (#135)
* Fix border misalignment

* Update main.yml

* Update main.yml

* Update main.yml

--- a/src/link/style.scss
+++ b/src/link/style.scss
@@ -339,7 +339,6 @@ body {
 
 		.components-popover__content {
 			overflow: unset !important;
-			border-radius: 8px 8px 0 0;
 			height: unset !important;
 		}
 
